Error Mitigation/MagiCoder/Data/javax_swing_undo/javax_swing_undoOutputResult.txt
Sample: AbstractUndoableEdit_1
----------------------------------------------------------------
stdout:
true
false

================================================================

Sample: AbstractUndoableEdit_2
----------------------------------------------------------------
stdout:
false

================================================================

Sample: AbstractUndoableEdit_3
----------------------------------------------------------------
output:
./Data/javax_swing_undo/javaFiles/AbstractUndoableEdit_3.java:12: error: cannot find symbol
                setHasBeenDone(false);
                ^
  symbol: method setHasBeenDone(boolean)
1 error


================================================================

Sample: AbstractUndoableEdit_4
----------------------------------------------------------------
stderr:
javax.swing.undo.CannotRedoException
	at java.desktop/javax.swing.undo.AbstractUndoableEdit.redo(AbstractUndoableEdit.java:143)
	at AbstractUndoableEdit_4$1.redo(AbstractUndoableEdit_4.java:9)
	at AbstractUndoableEdit_4.main(AbstractUndoableEdit_4.java:15)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: AbstractUndoableEdit_5
----------------------------------------------------------------
stdout:
My Undoable Edit

================================================================

Sample: CompoundEdit_2
----------------------------------------------------------------
stdout:
false

================================================================

Sample: CompoundEdit_3
----------------------------------------------------------------
stdout:
false

================================================================

Sample: CompoundEdit_4
----------------------------------------------------------------
output:
./Data/javax_swing_undo/javaFiles/CompoundEdit_4.java:8: error: <anonymous CompoundEdit_4$1> is not abstract and does not override abstract method getRedoPresentationName() in UndoableEdit
        UndoableEdit undoableEdit = new UndoableEdit() {
                                                       ^
./Data/javax_swing_undo/javaFiles/CompoundEdit_4.java:11: error: cannot find symbol
        compoundEdit.add(undoableEdit);
                    ^
  symbol:   method add(UndoableEdit)
  location: variable compoundEdit of type CompoundEdit
2 errors


================================================================

Sample: CompoundEdit_5
----------------------------------------------------------------
output:
./Data/javax_swing_undo/javaFiles/CompoundEdit_5.java:21: error: cannot find symbol
            public void redo() throws CannotRedoException {
                                      ^
  symbol: class CannotRedoException
./Data/javax_swing_undo/javaFiles/CompoundEdit_5.java:8: error: <anonymous CompoundEdit_5$1> is not abstract and does not override abstract method die() in UndoableEdit
        UndoableEdit undoableEdit1 = new UndoableEdit() {
                                                        ^
./Data/javax_swing_undo/javaFiles/CompoundEdit_5.java:68: error: <anonymous CompoundEdit_5$2> is not abstract and does not override abstract method getRedoPresentationName() in UndoableEdit
        UndoableEdit undoableEdit2 = new UndoableEdit() {
                                                        ^
3 errors


================================================================

Sample: StateEdit_1
----------------------------------------------------------------
output:
./Data/javax_swing_undo/javaFiles/StateEdit_1.java:7: error: no suitable constructor found for StateEdit(no arguments)
        StateEdit stateEdit = new StateEdit() {
                              ^
    constructor StateEdit.StateEdit(StateEditable) is not applicable
      (actual and formal argument lists differ in length)
    constructor StateEdit.StateEdit(StateEditable,String) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: StateEdit_2
----------------------------------------------------------------
output:
./Data/javax_swing_undo/javaFiles/StateEdit_2.java:5: error: class StateEdit is public, should be declared in a file named StateEdit.java
public class StateEdit extends AbstractUndoableEdit {
       ^
1 error


================================================================

Sample: UndoManager_1
----------------------------------------------------------------
stderr:
javax.swing.undo.CannotUndoException
	at java.desktop/javax.swing.undo.UndoManager.tryUndoOrRedo(UndoManager.java:468)
	at java.desktop/javax.swing.undo.UndoManager.undo(UndoManager.java:416)
	at UndoManager_1.main(UndoManager_1.java:8)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: UndoManager_2
----------------------------------------------------------------
stderr:
javax.swing.undo.CannotRedoException
	at java.desktop/javax.swing.undo.UndoManager.tryUndoOrRedo(UndoManager.java:469)
	at java.desktop/javax.swing.undo.UndoManager.redo(UndoManager.java:453)
	at UndoManager_2.main(UndoManager_2.java:8)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: UndoManager_3
----------------------------------------------------------------
stdout:
false

================================================================

Sample: UndoManager_4
----------------------------------------------------------------
output:
./Data/javax_swing_undo/javaFiles/UndoManager_4.java:7: error: cannot find symbol
        UndoableEdit undoableEdit = undoManager.getUndoableEdit();
                                               ^
  symbol:   method getUndoableEdit()
  location: variable undoManager of type UndoManager
1 error


================================================================

Sample: UndoManager_5
----------------------------------------------------------------
================================================================

